[package]
name = "gcast"
version = "0.1.0"
authors = ["Dylan McKay <dylanmckay34@gmail.com>"]

description = "A library for using Google Cast devices"
license = "MIT"
documentation = "https://docs.rs/cast"
repository = "https://github.com/dylanmckay/cast"

keywords = ["cast", "chromecast"]

[dependencies]
mdns = "0.1.2"
mio = "0.6"
uuid = "0.3"
error-chain = "0.6"
byteorder = "0.5"
