[package]
name = "gcast-protocol"
version = "0.1.0"
authors = ["Dylan McKay <dylanmckay34@gmail.com>"]

description = "A library for using Google Cast devices"
license = "MIT"
documentation = "https://docs.rs/gcast-protocol"
repository = "https://github.com/dylanmckay/cast"

keywords = ["cast", "chromecast"]

[lib]
path = "mod.rs"

[dependencies]
gcast-wire = { path = "wire" }
error-chain = "0.6"
protobuf = "1.0.24"
json = "0.11"
