[package]
name = "gcast-protocol"
version = "0.1.3"
authors = ["Dylan McKay <dylanmckay34@gmail.com>"]

description = "A library for using Google Cast devices"
license = "MIT"
documentation = "https://docs.rs/gcast"
repository = "https://github.com/dylanmckay/gcast"

keywords = ["cast", "chromecast"]

[lib]
path = "mod.rs"

[dependencies]
gcast-wire = { version = "0.1.2", path = "wire" }
error-chain = "0.6"
protobuf = "1.0.24"
json = "0.11"
uuid = { version = "0.3", features = ["use_std"] }
